@@ -1,16 +1,13 @@
 Package: ccaPP
 Type: Package
-Title: (Robust) canonical correlation analysis via projection pursuit
+Title: (Robust) Canonical Correlation Analysis via Projection Pursuit
 Version: 0.3.1
-Date: 2015-09-10
+Date: 2015-11-10
 Depends:
     R (>= 3.0.2),
     parallel,
     pcaPP (>= 1.8-1),
     robustbase
-Imports:
-    Rcpp,
-    RcppArmadillo
 LinkingTo: Rcpp (>= 0.9.10), RcppArmadillo (>= 0.2.36)
 Suggests:
     mvtnorm
