@@ -17,8 +17,6 @@ export(fastMedian)
 export(maxCorGrid)
 export(maxCorProj)
 export(permTest)
-import(Rcpp)
-import(RcppArmadillo)
 import(parallel)
 import(pcaPP)
 import(robustbase)
