@@ -31,8 +31,6 @@
 #' 
 #' @keywords multivariate robust
 #' 
-#' @import Rcpp
-#' @import RcppArmadillo
 #' @useDynLib ccaPP
 #' @export
 
